add camunda with basic flow